include/libimobiledevice/libimobiledevice.h

typedef struct idevice_private idevice_private; /**< \private */
typedef idevice_private *idevice_t; /**< The device handle. */