include/libiphone/sbservices.h

typedef int16_t sbservices_error_t;
struct sbservices_client_int;
typedef struct sbservices_client_int *sbservices_client_t;
/* Interface */
sbservices_error_t sbservices_client_new(iphone_device_t device, int dst_port, sbservices_client_t *client);
sbservices_error_t sbservices_client_free(sbservices_client_t client);
sbservices_error_t sbservices_get_icon_state(sbservices_client_t client, plist_t *state);
sbservices_error_t sbservices_set_icon_state(sbservices_client_t client, plist_t newstate);
sbservices_error_t sbservices_get_icon_pngdata(sbservices_client_t client, const char *bundleId, char **pngdata, uint64_t *pngsize);